# verlies

./: .gitignore  CMakeLists.txt  CppCheckResults.xml  README.md  generate_filelist.sh  main.cpp  verlies.cbp  verlies.depend  verlies.layout
src/: Logfile.cpp  console.cpp  keys.txt  main.cpp  resource_manger.cpp  translate.sh  window.cpp
src/include/: Logfile.h  console.h  resource_manager.h  window.h
src/locale/: verlies.pot
src/locale/de_DE/LC_MESSAGES/: verlies.mo  verlies.po
